introducción de la foto

--- a/personal.html
+++ b/personal.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Presentación personal</h1>      
     <h2>Mis gustos y aficiones</h2>
+    <p>De siempre me han gustado los videjuegos a parte de los deportes como el fútbol, skate y baloncesto.</p>
+    <img src="https://www.latribunadecuenca.es/media/IMG/2024/637311C9-0FA8-A03C-9C2F85D97ADC899A.JPG" alt="">
+    
+    
 </body>
 </html>
